minor errors correction

--- a/servers.yml
+++ b/servers.yml
@@ -61,7 +61,7 @@ Resources:
           apt-get install apache2 -y
           systemctl start apache2.service
           cd /var/www/html
-          aws s3 cp s3://udacity-demo-1/udacity.zip .
+          aws s3 cp s3://gabocom-demo/udacity.zip
           unzip -o udacity.zip
       ImageId: ami-0ac80df6eff0e70b5
       KeyName: GaBoProject
