--- a/servers.yml
+++ b/servers.yml
@@ -46,10 +46,11 @@ Resources:
         ToPort: 65535
         CidrIp: 0.0.0.0/0
   ProfileWithRolesForOurApp:
-    Type: AWS::IAM::InstanceProfile
+    Type: "AWS::IAM::InstanceProfile"
     Properties: 
+      Path: "/"
       Roles:
-        - EC2_to_S3_access
+      - EC2_to_S3_access
   WebAppLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
@@ -61,13 +62,13 @@ Resources:
           apt-get install apache2 -y
           systemctl start apache2.service
           cd /var/www/html
-          aws s3 cp s3://gabocom-demo/udacity.zip
-          unzip -o udacity.zip
+          aws s3 cp s3://gabocom-demo/index.html          
       ImageId: ami-0ac80df6eff0e70b5
       KeyName: GaBoProject
+      IamInstanceProfile: ProfileWithRolesForOurApp
       SecurityGroups:
       - Ref: WebServerSecGroup
-      InstanceType: t3.xlarge
+      InstanceType: t2.micro
       BlockDeviceMappings:
       - DeviceName: "/dev/sdk"
         Ebs:
