--- a/servers.yml
+++ b/servers.yml
@@ -49,19 +49,19 @@ Resources:
     Type: AWS::IAM::InstanceProfile
     Properties: 
       Roles:
-      - Ref: EC2_to_S3_access
+      - EC2_to_S3_access
   WebAppLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash
-          apt-get update -y
-          apt-get install unzip awscli -y
-          apt-get install apache2 -y
-          systemctl start apache2.service
+          sudo apt-get update -y
+          sudo apt-get install unzip awscli -y
+          sudo apt-get install apache2 -y
+          sudo systemctl start apache2.service
           cd /var/www/html
-          aws s3 cp s3://gabocom-demo/index.html          
+          sudo aws s3 cp s3://gabocom-demo/index.html /
       ImageId: ami-0ac80df6eff0e70b5
       KeyName: GaBoProject
       IamInstanceProfile:
