modified the instance type to t3.xlarge (4vCPU)

--- a/servers.yml
+++ b/servers.yml
@@ -56,19 +56,19 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash
-          sudo apt-get update -y
-          sudo apt-get install unzip awscli -y
-          sudo apt-get install apache2 -y
-          sudo systemctl start apache2.service
+          apt-get update -y
+          apt-get install unzip awscli -y
+          apt-get install apache2 -y
+          systemctl start apache2.service
           cd /var/www/html
-          sudo aws s3 cp s3://gabocom-demo/index.html /
+          aws s3 cp s3://gabocom-demo/index.html ./
       ImageId: ami-0ac80df6eff0e70b5
       KeyName: GaBoProject
       IamInstanceProfile:
         Ref: ProfileWithRolesForOurApp
       SecurityGroups:
       - Ref: WebServerSecGroup
-      InstanceType: t2.micro
+      InstanceType: t3.xlarge
       BlockDeviceMappings:
       - DeviceName: "/dev/sdk"
         Ebs:
